# merlin-language-server

./: .gitignore  README.md  azure-pipelines.yml  package.json
.ci/: esy-build-steps.yml  test-e2e-build-steps.yml
src/Protocol/: Log.re  Notification.re  Ppx_let_syntax_result.re  Preamble.re  Protocol.re  Request.re  Response.re  Rpc.re  Types.re  Utility.re  dune
src/Server/: DocumentStore.re  Merlin.re  MerlinDiscovery.re  MerlinDiscovery.rei  MerlinLspBridge.re  Server.re  dune
src/lib/: Lib.re  Protocol.re  Rpc.re  Util.re  dune
test-e2e/: package-lock.json  package.json
test-e2e/__tests__/: Lifecycle.test.ts  Request.Debug.test.ts  TextDocument.test.ts  hello.test.ts
test-e2e/src/: LanguageServer.ts
test/Protocol_Test/: NotificationTest.re  PreambleTest.re  TestFramework.re  UtilityTest.re  dune
test/Server_Test/: DocumentStoreTest.re  MerlinTest.re  dune
test/lib/: ProtocolTest.re  dune
